@@ -2,14 +2,13 @@ package com.raczkowski.app.user;
 
 import com.raczkowski.app.accountPremium.SubscriptionService;
 import com.raczkowski.app.dto.UserDto;
-import com.raczkowski.app.dtoMappers.UserDtoMapper;
+import com.raczkowski.app.dto.UserDtoAssembler;
 import com.raczkowski.app.enums.PremiumAccountRange;
 import lombok.AllArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @RestController
@@ -17,19 +16,13 @@ import java.util.stream.Collectors;
 public class userController {
 
     private final UserService userService;
-    private final UserStatisticsService userStatisticsService;
+    private final UserDtoAssembler userDtoAssembler;
     private final SubscriptionService subscriptionService;
 
     @GetMapping("/get")
     ResponseEntity<UserDto> getUserById(@RequestParam Long id) {
         AppUser user = userService.getUserById(id);
-        return ResponseEntity.ok(UserDtoMapper.userDto(
-                user,
-                userStatisticsService.getArticlesCount(user),
-                userStatisticsService.getCommentsCount(user),
-                userStatisticsService.getFollowersCount(user),
-                userStatisticsService.getFollowingCount(user)
-        ));
+        return ResponseEntity.ok(userDtoAssembler.assemble(user));
     }
 
     @GetMapping("/get/login")
@@ -50,26 +43,13 @@ public class userController {
     @GetMapping("/{userId}/followers")
     public ResponseEntity<List<UserDto>> getFollowers(@PathVariable Long userId) {
         return ResponseEntity.ok(userService.getFollowersCount(userId).stream()
-                .map(user -> UserDtoMapper.userDto(
-                        user,
-                        userStatisticsService.getArticlesCount(user),
-                        userStatisticsService.getCommentsCount(user),
-                        userStatisticsService.getFollowersCount(user),
-                        userStatisticsService.getFollowingCount(user)
-                ))
-                .collect(Collectors.toList()));
+                .map(userDtoAssembler::assemble).toList());
     }
 
     @GetMapping("/{userId}/following")
     public ResponseEntity<List<UserDto>> getFollowing(@PathVariable Long userId) {
         return ResponseEntity.ok(userService.getFollowingUsersByUserCount(userId).stream()
-                .map(user -> UserDtoMapper.userDto(
-                        user,
-                        userStatisticsService.getArticlesCount(user),
-                        userStatisticsService.getCommentsCount(user),
-                        userStatisticsService.getFollowersCount(user),
-                        userStatisticsService.getFollowingCount(user)
-                )).collect(Collectors.toList()));
+                .map(userDtoAssembler::assemble).toList());
     }
 
     @PostMapping("/save")
